spin_configs/3.0-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["128.55.206.106"],"port":443,"protocol":"HTTPS","serviceName":"amsc-d3:grafana","ingressName":"amsc-d3:ingress","hostname":"amsc-d3.ml4phys.com","path":"/grafana","allNodes":true},{"addresses":["128.55.206.106"],"port":443,"protocol":"HTTPS","serviceName":"amsc-d3:remote-triton-controller","ingressName":"amsc-d3:ingress","hostname":"amsc-d3.ml4phys.com","path":"/api","allNodes":true}]
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"ingress","namespace":"amsc-d3"},"spec":{"ingressClassName":"nginx","rules":[{"host":"amsc-d3.ml4phys.com","http":{"paths":[{"backend":{"service":{"name":"acmecron-ingress-spin-acme-websrv","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}},{"host":"ingress.amsc-d3.production.svc.spin.nersc.org","http":{"paths":[{"backend":{"service":{"name":"acmecron-ingress-spin-acme-websrv","port":{"number [...]
    meta.helm.sh/release-name: acmecron-ingress
    meta.helm.sh/release-namespace: amsc-d3
    nersc.gov/clustername: production
    nersc.gov/collab_uids: '102407'
    nersc.gov/gid: '81687'
    nersc.gov/gids: 4871,61512,59322,72330,81687,81765,74560,96414,103452,103453,113529
    nersc.gov/roles: user
    nersc.gov/serveralias: svc
    nersc.gov/uid: '81687'
    nersc.gov/username: esseivaj
  creationTimestamp: '2026-03-11T17:38:24Z'
  generation: 5
  labels:
    app.kubernetes.io/instance: acmecron-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spin-acme
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: spin-acme-0.1.0
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/version: {}
            f:helm.sh/chart: {}
        f:spec:
          f:ingressClassName: {}
          f:tls: {}
      manager: helm
      operation: Apply
      time: '2026-03-11T17:38:22Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      subresource: status
      time: '2026-03-11T17:38:26Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:kubectl.kubernetes.io/last-applied-configuration: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2026-03-11T17:40:19Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:field.cattle.io/publicEndpoints: {}
        f:spec:
          f:rules: {}
      manager: agent
      operation: Update
      time: '2026-03-11T18:02:57Z'
  name: ingress
  namespace: amsc-d3
  resourceVersion: '1129270424'
  uid: af03c098-cc82-41b6-9c5b-37d7c1a26235
spec:
  ingressClassName: nginx
  rules:
    - host: amsc-d3.ml4phys.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /grafana
            pathType: Prefix
          - backend:
              service:
                name: remote-triton-controller
                port:
                  number: 8080
            path: /api
            pathType: Prefix
    - host: ingress.amsc-d3.production.svc.spin.nersc.org
  tls:
    - hosts:
        - amsc-d3.ml4phys.com
        - ingress.amsc-d3.production.svc.spin.nersc.org
      secretName: tls-cert-ingress
status:
  loadBalancer:
    ingress:
      - ip: 128.55.206.106
      - ip: 128.55.206.107
      - ip: 128.55.206.108
      - ip: 128.55.206.109
      - ip: 128.55.206.110
      - ip: 128.55.206.111
      - ip: 128.55.206.112
      - ip: 128.55.206.113
